--- a/pom.xml
+++ b/pom.xml
@@ -14,7 +14,7 @@
     <maven.compiler.target>22</maven.compiler.target>
     <maven.compiler.source>22</maven.compiler.source>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-    <exec.mainClass>org.misamigos.Main</exec.mainClass>
+    <exec.mainClass>org.micalculadora.Main</exec.mainClass>
   </properties>
 
   <dependencies>
